add song playing capability